--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
         &nbsp; &nbsp;Healing ​Horizons&nbsp;Psychotherapy
         <br />
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-        <span style={{ fontSize: "1.125rem" }}>
+        <span styles={{ fontSize: "1.125rem" }}>
           "Discover your Inner Strength"
         </span>
       </h4>
@@ -55,7 +55,7 @@
       >
         <div
           className="menu-collapse"
-          style={{ fontSize: "1rem", letterSpacing: 0, fontWeight: 700 }}
+          styles={{ fontSize: "1rem", letterSpacing: 0, fontWeight: 700 }}
         >
           <a
             className="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
@@ -91,7 +91,7 @@
               <a
                 className="u-border-2 u-border-active-grey-30 u-border-grey-30 u-border-hover-grey-30 u-border-no-bottom u-border-no-left u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-light-1 u-text-palette-1-base"
                 href="Home.html"
-                style={{ padding: "0px 20px" }}
+                styles={{ padding: "0px 20px" }}
               >
                 Home
               </a>
@@ -100,7 +100,7 @@
               <a
                 className="u-border-2 u-border-active-grey-30 u-border-grey-30 u-border-hover-grey-30 u-border-no-bottom u-border-no-left u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-light-1 u-text-palette-1-base"
                 href="aboutUs.html"
-                style={{ padding: "0px 20px" }}
+                styles={{ padding: "0px 20px" }}
               >
                 About Us
               </a>
@@ -109,7 +109,7 @@
               <a
                 className="u-border-2 u-border-active-grey-30 u-border-grey-30 u-border-hover-grey-30 u-border-no-bottom u-border-no-left u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-light-1 u-text-palette-1-base"
                 href="contactUs.html"
-                style={{ padding: "0px 20px" }}
+                styles={{ padding: "0px 20px" }}
               >
                 Contact Us
               </a>
@@ -118,7 +118,7 @@
               <a
                 className="u-border-2 u-border-active-grey-30 u-border-grey-30 u-border-hover-grey-30 u-border-no-bottom u-border-no-left u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-light-1 u-text-palette-1-base"
                 href="donate.html"
-                style={{ padding: "0px 20px" }}
+                styles={{ padding: "0px 20px" }}
               >
                 Donate
               </a>
@@ -301,7 +301,7 @@
                         className="u-svg-link"
                         preserveAspectRatio="xMidYMin slice"
                         viewBox="0 0 512 512"
-                        style={{}}
+                        styles={{}}
                       >
                         <use
                           xmlnsXlink="http://www.w3.org/1999/xlink"
@@ -314,7 +314,7 @@
                         x="0px"
                         y="0px"
                         id="svg-7a40"
-                        style={{ enableBackground: "new 0 0 512 512" }}
+                        styles={{ enableBackground: "new 0 0 512 512" }}
                       >
                         <g>
                           <g>
@@ -402,7 +402,7 @@
                   className="u-svg-link"
                   preserveAspectRatio="xMidYMin slice"
                   viewBox="0 0 480 480"
-                  style={{}}
+                  styles={{}}
                 >
                   <use
                     xmlnsXlink="http://www.w3.org/1999/xlink"
@@ -415,7 +415,7 @@
                   x="0px"
                   y="0px"
                   id="svg-143b"
-                  style={{ enableBackground: "new 0 0 480 480" }}
+                  styles={{ enableBackground: "new 0 0 480 480" }}
                 >
                   <g>
                     <g>
@@ -466,7 +466,7 @@
                   className="u-svg-link"
                   preserveAspectRatio="xMidYMin slice"
                   viewBox="0 0 512 512"
-                  style={{}}
+                  styles={{}}
                 >
                   <use
                     xmlnsXlink="http://www.w3.org/1999/xlink"
@@ -511,7 +511,7 @@
                   className="u-svg-link"
                   preserveAspectRatio="xMidYMin slice"
                   viewBox="0 0 512 512"
-                  style={{}}
+                  styles={{}}
                 >
                   <use
                     xmlnsXlink="http://www.w3.org/1999/xlink"
@@ -554,7 +554,7 @@
                   className="u-svg-link"
                   preserveAspectRatio="xMidYMin slice"
                   viewBox="0 0 512 512"
-                  style={{}}
+                  styles={{}}
                 >
                   <use
                     xmlnsXlink="http://www.w3.org/1999/xlink"
@@ -722,7 +722,7 @@
                   <form
                     action="https://forms.nicepagesrv.com/v2/form/process"
                     className="u-clearfix u-form-spacing-15 u-form-vertical u-inner-form"
-                    style={{ padding: 0 }}
+                    styles={{ padding: 0 }}
                     source="email"
                     name="form"
                   >
@@ -793,7 +793,7 @@
                       <label
                         htmlFor="agree-f183"
                         className="u-agree-label u-block-f82a-32 u-field-label"
-                        style={{}}
+                        styles={{}}
                       >
                         I accept the <a href="#">Terms of Service</a>
                       </label>
