--- a/public/home.html
+++ b/public/home.html
@@ -90,7 +90,7 @@
             <li className="u-nav-item">
               <a
                 className="u-border-2 u-border-active-grey-30 u-border-grey-30 u-border-hover-grey-30 u-border-no-bottom u-border-no-left u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-light-1 u-text-palette-1-base"
-                href="Home.html"
+                href="home.html"
                 styles={{ padding: "0px 20px" }}
               >
                 Home
@@ -99,7 +99,7 @@
             <li className="u-nav-item">
               <a
                 className="u-border-2 u-border-active-grey-30 u-border-grey-30 u-border-hover-grey-30 u-border-no-bottom u-border-no-left u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-light-1 u-text-palette-1-base"
-                href="About-Us.html"
+                href="aboutUs.html"
                 styles={{ padding: "0px 20px" }}
               >
                 About Us
@@ -108,7 +108,7 @@
             <li className="u-nav-item">
               <a
                 className="u-border-2 u-border-active-grey-30 u-border-grey-30 u-border-hover-grey-30 u-border-no-bottom u-border-no-left u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-light-1 u-text-palette-1-base"
-                href="Contact-Us.html"
+                href="contactUs.html"
                 styles={{ padding: "0px 20px" }}
               >
                 Contact Us
@@ -117,7 +117,7 @@
             <li className="u-nav-item">
               <a
                 className="u-border-2 u-border-active-grey-30 u-border-grey-30 u-border-hover-grey-30 u-border-no-bottom u-border-no-left u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-light-1 u-text-palette-1-base"
-                href="Donate.html"
+                href="donate.html"
                 styles={{ padding: "0px 20px" }}
               >
                 Donate
@@ -131,25 +131,25 @@
               <div className="u-menu-close" />
               <ul className="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2">
                 <li className="u-nav-item">
-                  <a className="u-button-style u-nav-link" href="Home.html">
+                  <a className="u-button-style u-nav-link" href="home.html">
                     Home
                   </a>
                 </li>
                 <li className="u-nav-item">
-                  <a className="u-button-style u-nav-link" href="About-Us.html">
+                  <a className="u-button-style u-nav-link" href="aboutUs.html">
                     About Us
                   </a>
                 </li>
                 <li className="u-nav-item">
                   <a
                     className="u-button-style u-nav-link"
-                    href="Contact-Us.html"
+                    href="contactUs.html"
                   >
                     Contact Us
                   </a>
                 </li>
                 <li className="u-nav-item">
-                  <a className="u-button-style u-nav-link" href="Donate.html">
+                  <a className="u-button-style u-nav-link" href="donate.html">
                     Donate
                   </a>
                 </li>
