--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i|Ubuntu:300,300i,400,400i,500,500i,700,700i"
   />
   </head>
-  <body>
+  <body id="sec-abaa">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div id="modal"></div>
