--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <link rel="stylesheet" href="%PUBLIC_URL%nicepage.css" media="screen" />
-    <link rel="stylesheet" href="%PUBLIC_URL%Home.css" media="screen" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/styles/nicepage.css" media="screen" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/styles/home.css" media="screen" />
     <link
     id="u-theme-google-font"
     rel="stylesheet"
