--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html style="font-size: 16px;" lang="en">
 <head>
     <!-- Meta tags, CSS links, and other necessary tags -->
@@ -25,8 +25,11 @@
     <!-- Your content goes here -->
 
     <!-- JavaScript components -->
-    <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="src/component/jquery.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="src\component/nicepage.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="src\componentHome.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="src\component\AboutUs.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="src\componentContactUs.js" defer=""></script>
     <script type="application/ld+json">
         {
             "@context": "http://schema.org",
@@ -35,3 +38,4 @@
         }
     </script>
 </body>
+</html>
