corrected routes and index html

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,11 @@
     <meta property="og:title" content="About Us">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/">
-    <link rel="stylesheet" href="./styles/nicepage.css" media="screen">
-    <link rel="stylesheet" href="./styles/Home.css" media="screen">
-    <link rel="stylesheet" href="./styles/AboutUs.css" media="screen">
+    <link rel="stylesheet" href="../src/styles/nicepage.css" media="screen">
+    <link rel="stylesheet" href="../src/styles/Home.css" media="screen">
+    <link rel="stylesheet" href="../src/styles/AboutUs.css" media="screen">
+    <link rel="stylesheet" href="../src/styles/ContactUs.css" media="screen">
+    <link rel="stylesheet" href="../src/styles/Donate.css" media="screen">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i|Palanquin+Dark:400,500,600,700">
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i|Ubuntu:300,300i,400,400i,500,500i,700,700i">
 </head>
@@ -25,11 +27,11 @@
     <!-- Your content goes here -->
 
     <!-- JavaScript components -->
-    <script class="u-script" type="text/javascript" src="src/component/jquery.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="src\component/nicepage.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="src\componentHome.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="src\component\AboutUs.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="src\componentContactUs.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="../src/component/jquery.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="../src\component/nicepage.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="../src\componentHome.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="../src\component\AboutUs.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="../src\componentContactUs.js" defer=""></script>
     <script type="application/ld+json">
         {
             "@context": "http://schema.org",
