images imported in home js

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     <!-- JavaScript components -->
     <script class="u-script" type="text/javascript" src="../src/component/jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="../src\component/nicepage.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="../src\component/Navbar.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="../src\componentHome.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="../src\component\AboutUs.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="../src\componentContactUs.js" defer=""></script>
