--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,10 @@
     <!-- Your content goes here -->
 
     <!-- JavaScript components -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script class="u-script" type="text/javascript" src="../src/component/jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="../src\component/nicepage.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="../src\component/Navbar.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="../src\component/Header.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="../src\componentHome.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="../src\component\AboutUs.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="../src\componentContactUs.js" defer=""></script>
