--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,5 @@
 
+<!DOCTYPE html>
 <html style="font-size: 16px;" lang="en">
 <head>
     <!-- Meta tags, CSS links, and other necessary tags -->
@@ -24,16 +25,17 @@
 </head>
 <body>
   <div id="root"></div>
+
     <!-- Your content goes here -->
 
     <!-- JavaScript components -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script class="u-script" type="text/javascript" src="../src/component/jquery.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="../src\component/nicepage.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="../src\component/Header.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="../src\componentHome.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="../src\component\AboutUs.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="../src\componentContactUs.js" defer=""></script>
+    <script  src="../src/component/jquery.js" defer=""></script>
+    <script  src="../src\component/nicepage.js" defer=""></script>
+    <script src="../src\component/Header.js" defer=""></script>
+    <script  src="../src\componentHome.js" defer=""></script>
+    <script  src="../src\component\AboutUs.js" defer=""></script>
+    <script  src="../src\componentContactUs.js" defer=""></script>
     <script type="application/ld+json">
         {
             "@context": "http://schema.org",
