nicepage css fixes

--- a/public/index.html
+++ b/public/index.html
@@ -28,20 +28,20 @@
 
     <!-- Your content goes here -->
 
-    <!-- JavaScript components -->
+    <!-- JavaScript components 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script  src="../src/component/jquery.js" defer=""></script>
-    <script  src="../src\component/nicepage.js" defer=""></script>
-    <script src="../src\component/Header.js" defer=""></script>
-    <script  src="../src\componentHome.js" defer=""></script>
-    <script  src="../src\component\AboutUs.js" defer=""></script>
-    <script  src="../src\componentContactUs.js" defer=""></script>
+    <script  src="../src/component/nicepage.js" defer=""></script>
+    <script src="../src/component/Header.js" defer=""></script>
+    <script  src="../src/component/Home.js" defer=""></script>
+    <script  src="../src/component/AboutUs.js" defer=""></script>
+    <script  src="../src/component/ContactUs.js" defer=""></script>
     <script type="application/ld+json">
         {
             "@context": "http://schema.org",
             "@type": "Organization",
             "name": "charity"
         }
-    </script>
+    </script> -->
 </body>
 </html>
